--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -8,17 +8,15 @@ Prepare aggregated time-series data for inference using a Bayesian fishery model
 
 ## Prepare data for discrete logistic models
 
-This step requires 03.biomass_index_carstm.r to be completed as it statistically models the survey samples in space and time and then aggregates across space. 
+This step requires 03.biomass_index_carstm.r to be completed as it statistically models the survey samples in space and time and then aggregates across space for a less biased estimate/index of abundance. 
 
+  [bio.snowcrab/inst/scripts/03.biomass_index_carstm.r](bio.snowcrab/inst/scripts/03.biomass_index_carstm.r)  
 
-```r
-# R-code
-source( file.path( code_root, "bio_startup.R" )  )
-loadfunctions("bio.snowcrab")
-year.assessment = 2022  # <<< change this as required
+Make sure to have run at the very bottom of the file:
 
-# assemble the required data for each region and save it.
-fishery_model_data_inputs( year.assessment=year.assessment, type="biomass_dynamics", for_julia=TRUE )
+```R
+## note the output directory .. this location is used below
+fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE ) 
 ```
 
 
@@ -28,47 +26,91 @@ fishery_model_data_inputs( year.assessment=year.assessment, type="biomass_dynami
 
 Now that data inputs are complete, we can continue on to model fitting and inference. This is done in (Julia)[https://julialang.org/]. 
 
-This requires [https://github.com/jae0/dynamical_model](https://github.com/jae0/dynamical_model). 
+First install or download Julia and install appropriate libraries from withing Julia. 
 
-Install or download it and then run the following:
+There are two ways you can use this. 
 
-(Alternatively, you can run directly from [https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are shown.)
+  1. Run within Julia directly.
+
+    This method is most flexible and [documented here](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are also shown.  
+
+  2. Run within R and indirectly call Julia, using the JuliaCall R-library (install that too).
+
+    This method is shown below.
 
 
+```R
+ 
+  year.assessment = 2022
 
-```julia
-# Julia-code follows:
+  p = bio.snowcrab::load.environment( year.assessment=year.assessment )
 
-## change these to the right year and location:
-year_assessment = 2023 
 
-# location of dynamical_model
+  if (0) {
+      # to set up:
+      # julia_setup(JULIA_HOME = "the folder that contains julia binary")
+      # options(JULIA_HOME = "the folder that contains julia binary")
+      # Set JULIA_HOME in command line environment.
+      install.packages("JuliaCall")
+      install_julia()
+  }
 
-project_directory = joinpath( homedir(), "bio", "dynamical_model", "snowcrab" ) 
-# project_directory = joinpath( homedir(), "projects", "dynamical_model", "snowcrab" ) 
+  # load JuliaCall interface
+  library(JuliaCall)
+  julia <- julia_setup()
 
-# location of data
-bio_data_directory = joinpath( homedir(), "bio.data" )  
-outputs_directory  = joinpath( homedir(), "bio.data", "bio.snowcrab", "fishery_model" ) 
 
-runtype = "operational"
-model_variation = "logistic_discrete_historical"  # pre-2022 method 
+  # set up paths: adjust to local copy of bio.snowcrab library
+  julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
 
-# choose a region of interest:
-aulab = "cfanorth"
-aulab = "cfasouth"
-aulab = "cfa4x"
+  # julia_source cannot traverse directories .. temporarily switch directory
+  currentwd = getwd() 
+ 
+    setwd(julia_scripts_location) 
 
-include( joinpath(project_directory, "snowcrab_startup.jl" ) )  # add some paths and package requirements
+    julia_assign( "random_seed", 12345 )
 
-Random.seed!(year_assessment);
+    julia_source( "snowcrab_startup.jl" )  # load/install libraries and setup directories
+    julia_source( "logistic_discrete_functions.jl" )  # core modelling functions
 
-res  =  sample( fmod, turing_sampler, MCMCThreads(), n_samples, n_chains ) # sample in parallel 
 
-# if threading is not working (MSWindows?) try:
-# res = mapreduce(c -> sample(fmod, turing_sampler, n_samples), chainscat, 1:n_chains)
+    # load data; alter file path as required
+    fndat  = file.path( data_root, "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1", "biodyn_biomass.RData" )
+    o = load( fndat, convert=true)
+    julia_assign("o", o)
 
-@save res_fn res
+
+    ## set year of assessment in julia environment
+    julia_assign("year_assessment", year.assessment)  # copy data into julia session
+
+    # location of data
+    julia_assign("bio_data_directory", data_root)  # copy data into julia session
+    julia_assign("outputs_directory", file.path(data_root, "bio.snowcrab", "fishery_model" ))  # copy data into julia session
+
+
+    # Model and compute predictions for each area
+
+    # cfanorth:    
+    julia_assign( "aulab", "cfanorth" )  # copy data into julia session
+    julia_source( "logistic_discrete.jl" )   # modelling and outputs
+
+    # cfasouth:    
+    julia_assign( "aulab", "cfasouth")  # copy data into julia session
+    julia_source( "logistic_discrete.jl" )   # modelling and outputs
+
+    # cfa4x:    
+    julia_assign( "aulab", "cfa4x" )  # copy data into julia session
+    julia_source( "logistic_discrete.jl" )   # modelling and outputs
+
+  setwd(currentwd) # revert work directory
+
+  
+  # to move data into R
+  # objects that might be useful
+  # m, num, bio, trace, Fkt, FR, FM 
+  bio = julia_eval("bio")  # standard deviations
+
+ 
 
 ```
 
@@ -116,4 +158,6 @@ savefig(pl, joinpath( model_outdir, string("plot_hcr_", aulab, ".pdf") )  )
 
 And that is it. Continue with report generation either through [Markdown](./10.snowcrab_r_markdown_documents.md) or a word processor.
 
- 
+
+
+
