--- a/inst/scripts/10.snowcrab_r_markdown_documents.md
+++ b/inst/scripts/10.snowcrab_r_markdown_documents.md
@@ -12,22 +12,26 @@ Most are simple R code snippets to create the documents: change as desired / req
 # base location of R-markdown files and media/figures
 
 # choose or alter as required:
-  loc = file.path( Sys.getenv("HOME"), "projects" )
-  loc = file.path( Sys.getenv("HOME"), "bio" )
-  
+  # loc = file.path( Sys.getenv("HOME"), "projects" )
+  # loc = file.path( Sys.getenv("HOME"), "bio" )
+  loc =  = system.file( "markdown", package="bio.snowcrab" )
+
   # media_loc =  file.path( loc, ID, "media" )  # expect a media directory within each project
 
-  year.assessment = 2022
+  year.assessment = 2023
 ```
 
 ---
 
 # SAR: Science Advice Report for CSAS 
 ```r 
-  ID = "snowcrab_sar"
-  fn  = file.path( loc, ID, paste( ID, "_", year.assessment, ".rmd", sep="") )
-  pm = list( year.assessment=year.assessment, media_loc=file.path( loc, ID, "media" ) )
-  rmarkdown::render( fn, params=pm, output_dir=dirname(fn) )
+    ID = "snowcrab_sar"
+    media_loc = file.path( loc, "media" ) 
+    fn_sar_rmd  = file.path( loc, paste( ID, "_", year.assessment, ".rmd", sep="") )
+    pm = list( year.assessment=year.assessment, media_loc=media_loc, debugging=FALSE )
+    # pm = list( year.assessment=year.assessment, media_loc=media_loc, debugging=TRUE )
+    rmarkdown::render( fn_sar_rmd, params=pm, output_dir=dirname(fn_sar_rmd) )
+ 
 ```
 
 ---
@@ -38,7 +42,7 @@ Most are simple R code snippets to create the documents: change as desired / req
   ID = "snowcrab_sr"
   fn  = file.path( loc, ID, paste( ID, "_", year.assessment, ".rmd", sep="") )
   pm = list( year.assessment=year.assessment, media_loc=file.path( loc, ID, "media" )  )
-  rmarkdown::render( fn, params=pm, output_dir=dirname(fn) )
+  # rmarkdown::render( fn, params=pm, output_dir=dirname(fn) )
 ```
 
 ---
@@ -46,7 +50,7 @@ Most are simple R code snippets to create the documents: change as desired / req
 # RESDOC: Snow crab Science Research Document for CSAS 
 
 ```r 
-  ID = "snowcrab_resdoc"
+  ID = "snowcrab_working_paper"
   fn  = file.path( loc, ID, paste( ID, "_", year.assessment, ".rmd", sep="") )
   pm = list( year.assessment=year.assessment, media_loc=file.path( loc, ID, "media" )  )
   rmarkdown::render( fn, params=pm, output_dir=dirname(fn) )
@@ -66,15 +70,22 @@ Most are simple R code snippets to create the documents: change as desired / req
 
 ---
 
-# Snow crab Science Advisory presentations (N and S-ENS):
+# Snow crab Science Advisory presentations (NENS, SENS and 4X):
  
 ```r 
-TBC
+   # to generate output:
+    ID = "snowcrab_presentation"
+    media_loc = file.path( loc, "media" ) 
+    fn_rap_rmd  = file.path( loc, paste( ID, "_", year.assessment, "_general_summary", ".rmd", sep="") )
+    pm = list( year.assessment=year.assessment, media_loc=media_loc, debugging=TRUE ) # do not update data files
+    # pm = list( year.assessment=year.assessment, media_loc=media_loc, debugging=FALSE ) # redo data files
+    rmarkdown::render( fn_rap_rmd, params=pm, output_dir=dirname(fn_rap_rmd) )
+
 ```
 
 ---
 
-# Snow crab Science Advisory presentations:(4X)
+# Snow crab Science Advisory presentations:(4X .. old version)
 
 ```r 
 Move items from 11.4X.Advisory.Presentation.R into a markdown and then add the call here
