--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -45,6 +45,12 @@ There are two ways you can use this.
 
   p = bio.snowcrab::load.environment( year.assessment=year.assessment )
 
+  # location of data and outputs
+  outputs_directory = file.path(data_root, "bio.snowcrab", "fishery_model" )
+  model_outdir = file.path( outputs_directory, year.assessment, "logistic_discrete_historical" )
+
+  dir.create( outputs_directory, recursive=TRUE )
+  dir.create( model_outdir, recursive=TRUE )
 
   if (0) {
       # to set up:
@@ -65,13 +71,21 @@ There are two ways you can use this.
 
   # julia_source cannot traverse directories .. temporarily switch directory
   currentwd = getwd() 
- 
+
     setwd(julia_scripts_location) 
 
-    julia_assign( "random_seed", 12345 )
-
-    julia_source( "snowcrab_startup.jl" )  # load/install libraries and setup directories
-    julia_source( "logistic_discrete_functions.jl" )  # core modelling functions
+    ## transfer params to julia environment
+    julia_assign( "year_assessment", year.assessment )  # copy data into julia session
+    julia_assign( "julia_scripts_location", julia_scripts_location )
+    julia_assign( "bio_data_directory", data_root) 
+    julia_assign( "outputs_directory", outputs_directory )  # copy data into julia session
+    julia_assign( "model_outdir", model_outdir )  # copy data into julia session
+  
+    # load/install libraries and setup directories
+    julia_source( "snowcrab_startup.jl" )  
+    
+    # load core modelling functions
+    julia_source( "logistic_discrete_functions.jl" )  
 
 
     # load data; alter file path as required
@@ -80,15 +94,10 @@ There are two ways you can use this.
     julia_assign("o", o)
 
 
-    ## set year of assessment in julia environment
-    julia_assign("year_assessment", year.assessment)  # copy data into julia session
-
-    # location of data
-    julia_assign("bio_data_directory", data_root)  # copy data into julia session
-    julia_assign("outputs_directory", file.path(data_root, "bio.snowcrab", "fishery_model" ))  # copy data into julia session
-
 
     # Model and compute predictions for each area
+
+    julia_assign( "random_seed", 12345 )
 
     # cfanorth:    
     julia_assign( "aulab", "cfanorth" )  # copy data into julia session
