--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -52,6 +52,10 @@ There are two ways you can use this.
   dir.create( outputs_directory, recursive=TRUE )
   dir.create( model_outdir, recursive=TRUE )
 
+  # this needs to be the same as that produced above (fishery_model_data_inputs)
+  fndat  = file.path( data_root, "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1", "biodyn_biomass.RData" )
+
+
   if (0) {
       # to set up:
       # julia_setup(JULIA_HOME = "the folder that contains julia binary")
@@ -65,6 +69,13 @@ There are two ways you can use this.
   library(JuliaCall)
   julia <- julia_setup()
 
+  ## transfer params to julia environment
+  julia_assign( "year_assessment", year.assessment )  # copy data into julia session
+  julia_assign( "julia_scripts_location", julia_scripts_location )
+  julia_assign( "bio_data_directory", data_root) 
+  julia_assign( "outputs_directory", outputs_directory )  # copy data into julia session
+  julia_assign( "model_outdir", model_outdir )  # copy data into julia session
+
 
   # set up paths: adjust to local copy of bio.snowcrab library
   julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
@@ -74,30 +85,18 @@ There are two ways you can use this.
 
     setwd(julia_scripts_location) 
 
-    ## transfer params to julia environment
-    julia_assign( "year_assessment", year.assessment )  # copy data into julia session
-    julia_assign( "julia_scripts_location", julia_scripts_location )
-    julia_assign( "bio_data_directory", data_root) 
-    julia_assign( "outputs_directory", outputs_directory )  # copy data into julia session
-    julia_assign( "model_outdir", model_outdir )  # copy data into julia session
-  
     # load/install libraries and setup directories
     julia_source( "snowcrab_startup.jl" )  
     
     # load core modelling functions
     julia_source( "logistic_discrete_functions.jl" )  
 
-
     # load data; alter file path as required
-    fndat  = file.path( data_root, "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1", "biodyn_biomass.RData" )
-    o = load( fndat, convert=true)
-    julia_assign("o", o)
-
-
-
+    julia_assign( "fndat", fndat )  # load data into julia session
+    julia_command("o = load( fndat, convert=true) ")
+  
     # Model and compute predictions for each area
-
-    julia_assign( "random_seed", 12345 )
+    julia_command( "Random.seed!(1234)" )
 
     # cfanorth:    
     julia_assign( "aulab", "cfanorth" )  # copy data into julia session
