--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -71,7 +71,7 @@ There are two ways you can use this.
 
   ## transfer params to julia environment
   julia_assign( "year_assessment", year.assessment )  # copy data into julia session
-  julia_assign( "julia_scripts_location", julia_scripts_location )
+  
   julia_assign( "bio_data_directory", data_root) 
   julia_assign( "outputs_directory", outputs_directory )  # copy data into julia session
   julia_assign( "model_outdir", model_outdir )  # copy data into julia session
@@ -81,9 +81,9 @@ There are two ways you can use this.
   julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
 
   # julia_source cannot traverse directories .. temporarily switch directory
-  currentwd = getwd() 
 
-    setwd(julia_scripts_location) 
+  currentwd = getwd() 
+  setwd(julia_scripts_location) 
 
     # load/install libraries and setup directories
     julia_source( "snowcrab_startup.jl" )  
@@ -98,9 +98,11 @@ There are two ways you can use this.
     # Model and compute predictions for each area
     julia_command( "Random.seed!(1234)" )
 
+    # modelling and outputs for each region 
+
     # cfanorth:    
-    julia_assign( "aulab", "cfanorth" )  # copy data into julia session
-    julia_source( "logistic_discrete.jl" )   # modelling and outputs
+    julia_assign( "aulab", "cfanorth" )   
+    julia_source( "logistic_discrete.jl" )   
 
     # cfasouth:    
     julia_assign( "aulab", "cfasouth")  # copy data into julia session
