--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -99,6 +99,7 @@ There are two ways you can use this.
     julia_command( "Random.seed!(1234)" )
 
     # modelling and outputs for each region 
+    julia_assign( "yrs", p$yrs )   
 
     # cfanorth:    
     julia_assign( "aulab", "cfanorth" )   
