--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -48,9 +48,18 @@ There are two ways you can use this.
   # location of data and outputs
   outputs_directory = file.path(data_root, "bio.snowcrab", "fishery_model" )
   model_outdir = file.path( outputs_directory, year.assessment, "logistic_discrete_historical" )
-
+  work_dir = file.path( work_root, "fishery_model" )
+  
   dir.create( outputs_directory, recursive=TRUE )
   dir.create( model_outdir, recursive=TRUE )
+  dir.create( work_dir, recursive=TRUE)
+
+  # copy julia scripts to a temp location where julia can write to (R-library is usually write protected)
+  julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
+  file.copy( file.path(julia_scripts_location, "snowcrab_startup.jl"), work_dir )
+  file.copy( file.path(julia_scripts_location, "logistic_discrete_functions.jl"), work_dir )
+  file.copy( file.path(julia_scripts_location, "logistic_discrete.jl"), work_dir )
+
 
   # this needs to be the same as that produced above (fishery_model_data_inputs)
   fndat  = file.path( data_root, "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1", "biodyn_biomass.RData" )
@@ -78,12 +87,13 @@ There are two ways you can use this.
 
 
   # set up paths: adjust to local copy of bio.snowcrab library
-  julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
+  
 
   # julia_source cannot traverse directories .. temporarily switch directory
 
   currentwd = getwd() 
-  setwd(julia_scripts_location) 
+   
+  setwd(work_dir) 
 
     # load/install libraries and setup directories
     julia_source( "snowcrab_startup.jl" )  
