--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -56,9 +56,9 @@ There are two ways you can use this.
 
   # copy julia scripts to a temp location where julia can write to (R-library is usually write protected)
   julia_scripts_location = system.file( "julia", package="bio.snowcrab" )
-  file.copy( file.path(julia_scripts_location, "snowcrab_startup.jl"), work_dir )
-  file.copy( file.path(julia_scripts_location, "logistic_discrete_functions.jl"), work_dir )
-  file.copy( file.path(julia_scripts_location, "logistic_discrete.jl"), work_dir )
+  file.copy( file.path(julia_scripts_location, "snowcrab_startup.jl"), work_dir, overwrite=TRUE  )
+  file.copy( file.path(julia_scripts_location, "logistic_discrete_functions.jl"), work_dir, overwrite=TRUE )
+  file.copy( file.path(julia_scripts_location, "logistic_discrete.jl"), work_dir, overwrite=TRUE )
 
 
   # this needs to be the same as that produced above (fishery_model_data_inputs)
@@ -80,14 +80,10 @@ There are two ways you can use this.
 
   ## transfer params to julia environment
   julia_assign( "year_assessment", year.assessment )  # copy data into julia session
-  
   julia_assign( "bio_data_directory", data_root) 
   julia_assign( "outputs_directory", outputs_directory )  # copy data into julia session
   julia_assign( "model_outdir", model_outdir )  # copy data into julia session
 
-
-  # set up paths: adjust to local copy of bio.snowcrab library
-  
 
   # julia_source cannot traverse directories .. temporarily switch directory
 
