--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -121,57 +121,13 @@ There are two ways you can use this.
 
   setwd(currentwd) # revert work directory
 
-  
+  # Example:
   # to move data into R
-  # objects that might be useful
-  # m, num, bio, trace, Fkt, FR, FM 
-  bio = julia_eval("bio")  # standard deviations
+  # objects that might be useful:  m, num, bio, trace, Fkt, FR, FM 
+  # bio = julia_eval("bio")  
+```
 
  
-
-```
-
-Now that results have been generated and saved, we can continue with a few computations and predictions.
-
----
-
-## Predictions and figures
-
-
-```julia
-# n scaled, n unscaled, biomass of fb with and without fishing, model_traces, model_times 
-m, num, bio, trace, trace_bio, trace_time = fishery_model_predictions(res ) 
-
-# fishing (kt), relative Fishing mortality, instantaneous fishing mortality:
-Fkt, FR, FM = fishery_model_mortality() 
-
-# save a few data files as semicolon-delimited CSV's for use outside Julia
-summary_fn = joinpath( model_outdir, string("results_turing", "_", aulab, "_summary", ".csv" ) )  
-CSV.write( summary_fn,  summarize( res ), delim=";" )  # use semicolon as , also used in parm names
-  
-bio_fn1 = joinpath( model_outdir, string("results_turing", "_", aulab, "_bio_fishing", ".csv" ) )  
-CSV.write( bio_fn1,  DataFrame(bio[:,:], :auto), delim=";" )  # use semicolon as , also used in parm names
-
-fm_fn = joinpath( model_outdir, string("results_turing", "_", aulab, "_fm", ".csv" ) )  
-CSV.write( fm_fn,  DataFrame( FM, :auto), delim=";" )  # use semicolon as , also used in parm names
-
-
-# annual snapshots of biomass (kt) 
-pl = fishery_model_plot( toplot=("survey", "fishing" ) )
-savefig(pl, joinpath( model_outdir, string("plot_predictions_", aulab, ".pdf") )  )
-
-# plot fishing mortality, , 
-pl = fishery_model_plot( toplot="fishing_mortality" )
-# pl = plot(pl, ylim=(0, 0.65))
-savefig(pl, joinpath( model_outdir, string("plot_fishing_mortality_", aulab, ".pdf") )  )
-
-# HCR plot
-pl = fishery_model_plot( toplot="harvest_control_rule", n_sample=1000 ) #, alphav=0.01 )  # hcr
-# pl = plot(pl, ylim=(0, 0.65))
-savefig(pl, joinpath( model_outdir, string("plot_hcr_", aulab, ".pdf") )  )
-
-
-```
 
 And that is it. Continue with report generation either through [Markdown](./10.snowcrab_r_markdown_documents.md) or a word processor.
 
