remove race condition with groundfish gscat

--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -129,7 +129,7 @@ There are two ways you can use this.
 
  
 
-And that is it. Continue with report generation either through [Markdown](./10.snowcrab_r_markdown_documents.md) or a word processor.
+And that is it. Continue with report generation either through [Markdown](./10.snowcrab_r_markdown_documents.md).
 
 
 
