--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -1,12 +1,12 @@
-# Snow crab --- Areal unit modelling Hurdle / Delta model  
+# Snow crab Areal unit modelling  
 
 ## Purpose
 
-The snow crab biomass index is derived from the convolution of three separate Bayesian model solutions via posterior simulation.
+The snow crab biomass index is derived from the convolution of three separate Bayesian spatiotemporal model solutions via posterior simulation. This is completed through the [carstm](https://github.com/jae0/carstm) front-end to [INLA](https://www.r-inla.org/), used to perform "non-separable" spatial Conditional autocorrelation (CAR) and temporal (AR1) models. 
 
   - Poisson model of positive valued numbers offset by swept area in space and time 
-  - Mean body size (mass) in space and time 
-  - Presence-absence of organisms, where presence or absence is defined on a quantile threshold of numerical density presence_absence
+  - Mean body size (mass; kg) in space and time 
+  - Presence-absence of organisms in space and time, where presence or absence is defined on a quantile threshold of numerical density presence_absence
 
 The convolution of all three after posterior simulation is also known as a Hurdle or Delta model.
   
@@ -99,7 +99,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
   M = snowcrab.db( p=pN, DS="carstm_inputs", sppoly=sppoly, redo=TRUE )  # will redo if not found
 
   # for mapping below, some bathymetry and polygons
-  additional_features = snowcrab_features_tmap(pN)  
+  additional_features = snowcrab_mapping_features(pN)  
   
 ```
   
@@ -171,6 +171,8 @@ Each variable is modelled with the same covariates.
 
  
 ## Part 3: assimilation of models
+
+Convolution is straightforward as it is operating upon joint posterior simulations. Add more maps/figures as required.
 
 ```r
 
@@ -300,9 +302,7 @@ Each variable is modelled with the same covariates.
     # brks = pretty( log10( quantile( B[], probs=c(0.05, 0.95), na.rm=TRUE )* 10^6)  )
     sa = units::drop_units(sppoly$au_sa_km2)
     brks = pretty( ( quantile( log(B * 10^6 / sa), probs=c(0.05, 0.95), na.rm=TRUE ))  )
-  
-    additional_features = snowcrab_features_tmap(pN)  # for mapping below
-
+   
     for (i in 1:length(pN$yrs) ) {
       y = as.character( pN$yrs[i] )
       # u = log10( B[,y]* 10^6 )   ## Total kt->kg: log10( kg )
@@ -326,13 +326,14 @@ Each variable is modelled with the same covariates.
 ```
 
 
-## Part 4: prep data for integration into the fishery model (discrete version ofthe logistic model)
+## Part 4: prep data for integration into the fishery model (discrete version of the logistic model)
 
 The fishery model used for stock assessment is the biomass dynamics model. It is operated through Julia. This step creates the data required.
 
 ```r
+carstm_results_directory = file.path( p$modeldir, p$carstm_model_label, "fishery_model_results", p$fishery_model_label ) # default
 
-fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE ) ## note the output directory .. this is used for the next script
+fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory  ) ## note the output directory .. this is used for the next script
 
 # for development, save at alternate locations
 # carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
