--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -91,7 +91,8 @@ There are two ways you can use this.
    
   setwd(work_dir) 
 
-    # load/install libraries and setup directories
+    # load/install libraries and setup directories 
+    # .. if not all libraries are installed, you might need to re-run this a few more times
     julia_source( "snowcrab_startup.jl" )  
     
     # load core modelling functions
@@ -100,7 +101,7 @@ There are two ways you can use this.
     # load data; alter file path as required
     julia_assign( "fndat", fndat )  # load data into julia session
     julia_command("o = load( fndat, convert=true) ")
-  
+ 
     # Model and compute predictions for each area
     julia_command( "Random.seed!(1234)" )
 
