--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -15,8 +15,16 @@ This step requires 03.biomass_index_carstm.r to be completed as it statistically
 Make sure to have run at the very bottom of the file:
 
 ```R
-## note the output directory .. this location is used below
-fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE ) 
+  ## just a reminder that this is from the bottom of the file 03.biomass_index_carstm.r
+  ## note the output directory .. this location is used below in the Julia section
+  
+  if (0) {
+    # already run in C, so no need to run here, unless it needs to be refreshed
+    carstm_results_directory = file.path( p$modeldir, p$carstm_model_label, "fishery_model_results", p$fishery_model_label ) # default
+
+    fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory  ) 
+  }
+
 ```
 
 
