--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -325,6 +325,9 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
    # end assimilate size and numbers
 ```
 
+# area-specific figures
+    figure_area_based_extraction_from_carstm(DS="temperature", year.assessment )  # can only do done once we have an sppoly for snow crab
+      
 
 ## Part 4: prep data for integration into the fishery model (discrete version of the logistic model)
 
