--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -53,7 +53,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
 
   # params for probability of observation
   pH = snowcrab_parameters( 
-    project_clastheta_inits="carstm", 
+    project_class="carstm", 
     yrs=yrs,  
     areal_units_type="tesselation", 
     carstm_model_label= runlabel,  
