--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -20,9 +20,18 @@ Make sure to have run at the very bottom of the file:
   
   if (0) {
     # already run in C, so no need to run here, unless it needs to be refreshed
-    carstm_results_directory = file.path( p$modeldir, p$carstm_model_label, "fishery_model_results", p$fishery_model_label ) # default
 
-    fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory  ) 
+    ## note the output directory .. this is used for the next script
+    fishery_model_label = "turing1"
+
+    carstm_results_directory = file.path( pN$modeldir, pN$carstm_model_label, "fishery_model_results", fishery_model_label ) # default
+
+    fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, 
+      save_location=carstm_results_directory, fishery_model_label=fishery_model_label  ) 
+
+    # for development, save at alternate locations
+    # carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
+    # fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory )
   }
 
 ```
@@ -100,7 +109,8 @@ There are two ways you can use this.
   setwd(work_dir) 
 
     # load/install libraries and setup directories 
-    # .. if not all libraries are installed, you might need to re-run this a few more times
+    # .. if not all libraries are installed, you might need to re-run this a few times 
+    # .. until there are no longer any pre-compilation messages
     julia_source( "snowcrab_startup.jl" )  
     
     # load core modelling functions
