--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -167,6 +167,167 @@ Each variable is modelled with the same covariates.
  
   # end spatiotemporal model
 
+  # some maps and plots
+
+    for (vns in c( "number", "meansize", "habitat") ) {
+ 
+      if ( vns=="number" ) {
+        p=pN
+        ylab = "Number"
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.numerical.densities" )
+        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
+        fn_root_prefix = "Predicted_numerical_abundance"
+        fn_root =  "Predicted_numerical_abundance_persistent_spatial_effect" 
+        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
+        title= paste( snowcrab_filter_class, "Number; no./m^2"  )
+      }
+      if ( vns=="meansize") {
+        p=pW
+        ylab = "Mean weight"
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.meansize" )
+        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
+        fn_root_prefix = "Predicted_meansize"
+        fn_root =  "Predicted_meansize_persistent_spatial_effect" 
+        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
+        title= paste( snowcrab_filter_class, "Mean weight; kg" ) 
+      }
+      if ( vns=="habitat" ) {
+        p=pH
+        ylab = "Probability"
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.presence_absence" )
+        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
+        fn_root_prefix = "Predicted_presence_absence"
+        fn_root =  "Predicted_presence_absence_persistent_spatial_effect" 
+        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
+        title= paste( snowcrab_filter_class, "Probability")  
+
+          # if (vns=="habitat") {
+          #   # to compute habitat prob
+          #   sims = carstm_posterior_simulations( pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
+          #   SM = aggregate_simulations( 
+          #     sims=sims, 
+          #     sppoly=sppoly, 
+          #     fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ), 
+          #     yrs=pN$yrs, 
+          #     method="mean", 
+          #     redo=TRUE 
+          #   ) 
+          #   outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "aggregated_habitat_timeseries" )
+          #   ylabel = "Habitat probability"
+          #   fn_ts = "habitat_M0.png"
+          #   vn = paste("habitat", "predicted", sep=".")
+          #   outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_habitat" )
+
+          # }         
+      
+      }
+
+   
+
+      res = carstm_model( p=p, DS="carstm_modelled_summary",  sppoly = sppoly ) # to load currently saved results
+
+      # maps
+      vn = c( "random", "space", "combined" ) 
+      toplot = carstm_results_unpack( res, vn )
+      brks = pretty(  quantile(toplot[,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
+
+      carstm_map(  res=res, vn=vn, 
+        sppoly = sppoly, 
+        breaks = brks,
+        palette="-RdYlBu",
+        plot_elements="",
+        additional_features=additional_features,
+        legend.position=c( 0.08, 0.865 ),
+        annotation="spatial effect",
+        outfilename=outfilename
+      )  
+    
+
+      vn="predictions"
+      toplot = carstm_results_unpack( res, vn )
+      brks = pretty(  quantile(toplot[,,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
+
+      for (y in res$time_id ){
+        tmatch = as.character(y)
+        fn_root = paste(fn_root_prefix, paste0(tmatch, collapse="-"), sep="_")
+        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
+
+        carstm_map(  res=res, vn=vn, tmatch=tmatch,
+          sppoly = sppoly, 
+          breaks =brks,
+          palette="-RdYlBu",
+          plot_elements="",
+          # plot_elements=c(   "compass", "scale_bar", "legend" ),
+          additional_features=additional_features,
+          legend.position=c( 0.08, 0.865 ),
+          annotation=y, 
+#          title=paste(fn_root_prefix, snowcrab_filter_class,  paste0(tmatch, collapse="-") )
+          outfilename=outfilename
+        )
+        carmap
+        print(outfilename)
+      
+      }
+
+      # plots with 95% PI
+      oeffdir = file.path( outputdir, fn_root_prefix, "effects" )
+      if ( !file.exists(oeffdir)) dir.create( oeffdir, recursive=TRUE, showWarnings=FALSE )
+
+      (fn = file.path( oeffdir, "time.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "time" ), 
+          type="b",  xlab="Year", ylab=ylab, h=0, cex=1.25, cex.axis=1.25, cex.lab=1.25   )
+      dev.off()
+
+      (fn = file.path( oeffdir, "cyclic.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "cyclic" ), 
+          type="b", col="slategray", pch=19, lty=1, lwd=2.5,  
+          xlab="Season", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25   )
+      dev.off()
+
+      (fn = file.path( oeffdir, "temperature.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "inla.group(t, method = \"quantile\", n = 13)" ), 
+          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
+          xlab="Bottom temperature (degrees Celsius)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
+      dev.off()
+
+      (fn = file.path( oeffdir, "pca1.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "inla.group(pca1, method = \"quantile\", n = 13)" ), 
+          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
+          xlab="PCA1", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
+      dev.off()
+
+      (fn = file.path( oeffdir, "pca2.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "inla.group(pca2, method = \"quantile\", n = 13)" ), 
+          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
+          xlab="PCA2", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
+      dev.off()
+
+      (fn = file.path( oeffdir, "depth.png"))
+      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+        carstm_plotxy( res, vn=c( "res", "random", "inla.group(z, method = \"quantile\", n = 13)" ), 
+          type="b", col="slategray", pch=19, lty=1, lwd=2.5  ,
+          xlab="Depth (m)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
+      dev.off()
+
+
+      # (fn = file.path( outputdir, "substrate.png"))
+      # png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
+      #   carstm_plotxy( res, vn=c( "res", "random", "inla.group(substrate.grainsize, method = \"quantile\", n = 11)" ), 
+      #     type="b", col="slategray", pch=19, lty=1, lwd=2.5  ,
+      #     xlab="Substrate grain size (mm)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
+      # dev.off()
+
+ 
+    }
+
+
+
+
 ```
 
  
@@ -176,100 +337,91 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
 
 ```r
 
-    # wgts_max = 1.1 # kg, hard upper limit
-    # N_max = NULL
-    # #  quantile( M$totno[ipositive]/M$data_offset[ipositive], probs=0.95, na.rm=TRUE )  
-    
-    # posterior sims 
+  # wgts_max = 1.1 # kg, hard upper limit
+  # N_max = NULL
+  # #  quantile( M$totno[ipositive]/M$data_offset[ipositive], probs=0.95, na.rm=TRUE )  
   
-    sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
-    sims = sims  / 10^6 # units:  kg ; div (10^6) -> kt ;;
-#    sims[ which(!is.finite(sppoly$npts)),, ] = 0
+  # posterior sims 
 
-    SM = aggregate_simulations( 
-      sims=sims, 
-      sppoly=sppoly, 
-      fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ), 
-      yrs=pN$yrs, 
-      method="sum", 
-      redo=TRUE 
-    ) 
-    # units: kt/km^2
+  require(ggplot2)
+  library(ggbreak) 
 
-    if (0) {
-      # to compute habitat prob
-      sims = carstm_posterior_simulations( pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
+  regions = c("cfanorth", "cfasouth",  "cfa4x" )
+  region_label = c("N-ENS", "S-ENS", "4X")
+  color_map = c("#E69F00", "#56B4E9",  "#CC79A7" )  
+
+  sppoly = areal_units( p=pN )  # to reload
+
+  for ( vns in c("abundance", "habitat") ) {
+
+    if (vns=="abundance") {
+      sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
+      sims = sims  / 10^6 # units:  kg ; div (10^6) -> kt ;;
+  #    sims[ which(!is.finite(sppoly$npts)),, ] = 0
+
       SM = aggregate_simulations( 
         sims=sims, 
         sppoly=sppoly, 
         fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ), 
         yrs=pN$yrs, 
-        method="mean", 
+        method="sum", 
         redo=TRUE 
       ) 
-      outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "aggregated_habitat_timeseries" )
-      RES= SM$RES  
- 
-    }      
-    
-    RES= SM$RES  # units: kt
-    # RES = aggregate_simulations( fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ) )$RES
+      # units: kt
+      # note: using pN, even though this is biomass 
+      outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "aggregated_biomass_timeseries" )
+      ylabel = "Biomass index (kt)"
+      fn_ts = "biomass_M0.png"
+      vn = paste("biomass", "predicted", sep=".")
+      outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_biomass_densities" )
 
-    # note: using pN, even though this is biomass 
-    
-    outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "aggregated_biomass_timeseries" )
+    }  
 
+    RES= SM$RES  
+    
     if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
-
+    
+    # plot effects
 
     ( fn = file.path( outputdir, "cfa_all.png") )
     png( filename=fn, width=3072, height=2304, pointsize=12, res=300 )
-      plot( cfaall ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab="Biomass index (kt)", xlab="")
+      plot( cfaall ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab=ylabel, xlab="")
       lines( cfaall_lb ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
       lines( cfaall_ub ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
     dev.off()
 
     ( fn = file.path( outputdir, "cfa_south.png") )
     png( filename=fn, width=3072, height=2304, pointsize=12, res=300 )
-      plot( cfasouth ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab="Biomass index (kt)", xlab="")
+      plot( cfasouth ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab=ylabel, xlab="")
       lines( cfasouth_lb ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
       lines( cfasouth_ub ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
     dev.off()
 
     ( fn = file.path( outputdir, "cfa_north.png") )
     png( filename=fn, width=3072, height=2304, pointsize=12, res=300 )
-      plot( cfanorth ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab="Biomass index (kt)", xlab="")
+      plot( cfanorth ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab=ylabel, xlab="")
       lines( cfanorth_lb ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
       lines( cfanorth_ub ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
     dev.off()
 
     ( fn = file.path( outputdir, "cfa_4x.png") )
     png( filename=fn, width=3072, height=2304, pointsize=12, res=300 )
-      plot( cfa4x ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab="Biomass index (kt)", xlab="")
+      plot( cfa4x ~ yrs, data=RES, lty="solid", lwd=4, pch=20, col="slateblue", type="b", ylab=ylabel, xlab="")
       lines( cfa4x_lb ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
       lines( cfa4x_ub ~ yrs, data=RES, lty="dotted", lwd=2, col="slategray" )
     dev.off()
-
-
-    regions = c("cfanorth", "cfasouth",  "cfa4x" )
-    region_label = c("N-ENS", "S-ENS", "4X")
  
-    a= cbind( "cfanorth", RES[,c("yrs", "cfanorth", "cfanorth_lb", "cfanorth_ub")] )
-    b= cbind( "cfasouth", RES[,c("yrs", "cfasouth", "cfasouth_lb", "cfasouth_ub")] )
-    c= cbind( "cfa4x", RES[,c("yrs", "cfa4x", "cfa4x_lb", "cfa4x_ub")] )
+    a = cbind( "cfanorth", RES[,c("yrs", "cfanorth", "cfanorth_lb", "cfanorth_ub")] )
+    b = cbind( "cfasouth", RES[,c("yrs", "cfasouth", "cfasouth_lb", "cfasouth_ub")] )
+    c = cbind( "cfa4x", RES[,c("yrs", "cfa4x", "cfa4x_lb", "cfa4x_ub")] )
     names(a) = names(b) = names(c) = c("region", "year", "mean", "lb", "ub")
     tdb = rbind(a, b, c)
 
     tdb$region = factor(tdb$region, levels=regions, labels =region_label)
     tdb = tdb[(which(!is.na(tdb$region))), ]
-   
-    fn = file.path( outputdir, "biomass_M0.png" )
-    
-    require(ggplot2)
-    library(ggbreak) 
+  
+    fn = file.path( outputdir, fn_ts )
 
-    color_map = c("#E69F00", "#56B4E9",  "#CC79A7" )  
-    
     out = ggplot(tdb, aes(x=year, y=mean, fill=region, colour=region)) +
       geom_line( alpha=0.9, linewidth=1.2 ) +
       geom_point(aes(shape=region), size=3, alpha=0.7 ) +
@@ -284,17 +436,12 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
       
       # scale_y_continuous( limits=c(0, 300) )  
       ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
- 
+
     print(out)
 
     # map it ..mean density
-    sppoly = areal_units( p=pN )  # to reload
-
-    vn = paste("biomass", "predicted", sep=".")
-
-    outputdir = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_biomass_densities" )
-
-    if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
+ 
+    if ( !file.exists(outputdir2)) dir.create( outputdir2, recursive=TRUE, showWarnings=FALSE )
 
     B = apply( sims, c(1,2), mean )  # sims units (kt);  
     B[ which(!is.finite(B)) ] = NA
@@ -302,25 +449,28 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
     # brks = pretty( log10( quantile( B[], probs=c(0.05, 0.95), na.rm=TRUE )* 10^6)  )
     sa = units::drop_units(sppoly$au_sa_km2)
     brks = pretty( ( quantile( log(B * 10^6 / sa), probs=c(0.05, 0.95), na.rm=TRUE ))  )
-   
+  
     for (i in 1:length(pN$yrs) ) {
       y = as.character( pN$yrs[i] )
       # u = log10( B[,y]* 10^6 )   ## Total kt->kg: log10( kg )
       u = log( B[,y]* 10^6 / sa) # ;; density  log10( kg /km^2 )
       
       sppoly[,vn] = u
-      outfilename = file.path( outputdir , paste( "biomass", y, "png", sep=".") )
+      outfilename = file.path( outputdir2 , paste( "biomass", y, "png", sep=".") )
       plt =  carstm_map(  sppoly=sppoly, vn=vn,
           breaks=brks,
           additional_features=additional_features,
-          title=y,
-          # title=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
+          legend.position=c( 0.1, 0.9 ),
+          annotation=y,
+          # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
           colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
           outfilename=outfilename
       )
-        
-    }
+
+    } # end year loop
   
+  }  # end vns loop
+
    # end assimilate size and numbers
 ```
 
@@ -331,13 +481,18 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
 The fishery model used for stock assessment is the biomass dynamics model. It is operated through Julia. This step creates the data required.
 
 ```r
-carstm_results_directory = file.path( p$modeldir, p$carstm_model_label, "fishery_model_results", p$fishery_model_label ) # default
 
-fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory  ) ## note the output directory .. this is used for the next script
+  ## note the output directory .. this is used for the next script
+  fishery_model_label = "turing1"
 
-# for development, save at alternate locations
-# carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
-# fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory )
+  carstm_results_directory = file.path( pN$modeldir, pN$carstm_model_label, "fishery_model_results", fishery_model_label ) # default
+
+  fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, 
+    save_location=carstm_results_directory, fishery_model_label=fishery_model_label  ) 
+
+  # for development, save at alternate locations
+  # carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
+  # fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory )
 
 ```
 
