--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -264,9 +264,7 @@ Each variable is modelled with the same covariates.
 #          title=paste(fn_root_prefix, snowcrab_filter_class,  paste0(tmatch, collapse="-") )
           outfilename=outfilename
         )
-        carmap
-        print(outfilename)
-      
+       
       }
 
       # plots with 95% PI
@@ -457,7 +455,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
       
       sppoly[,vn] = u
       outfilename = file.path( outputdir2 , paste( "biomass", y, "png", sep=".") )
-      plt =  carstm_map(  sppoly=sppoly, vn=vn,
+      carstm_map(  sppoly=sppoly, vn=vn,
           breaks=brks,
           additional_features=additional_features,
           legend.position=c( 0.1, 0.9 ),
