--- a/inst/scripts/03.biomass_index_carstm.md
+++ b/inst/scripts/03.biomass_index_carstm.md
@@ -203,7 +203,7 @@ Each variable is modelled with the same covariates.
 
           # if (vns=="habitat") {
           #   # to compute habitat prob
-          #   sims = carstm_posterior_simulations( pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
+          #   sims = carstm_posterior_simulations( pH=pH, pa_threshold=0.05, qmax=0.95 )
           #   SM = aggregate_simulations( 
           #     sims=sims, 
           #     sppoly=sppoly, 
@@ -223,7 +223,6 @@ Each variable is modelled with the same covariates.
       }
 
    
-
       res = carstm_model( p=p, DS="carstm_modelled_summary",  sppoly = sppoly ) # to load currently saved results
 
       # maps
@@ -353,7 +352,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
   for ( vns in c("abundance", "habitat") ) {
 
     if (vns=="abundance") {
-      sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, sppoly=sppoly, pa_threshold=0.05, qmax=0.95 )
+      sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, pa_threshold=0.05, qmax=0.95 )
       sims = sims  / 10^6 # units:  kg ; div (10^6) -> kt ;;
   #    sims[ which(!is.finite(sppoly$npts)),, ] = 0
 
